<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "NIV1984">]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="title_activity_bible">&appname; Bible</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate">Rate &appname;</string>
    <string name="action_share">Share</string>
    <string name="action_feedback">Your Comment</string>
    <string name="action_update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="share">Share &appname;</string>
    <string name="share_message">Free offline Bible in NIV (1984 revision with footnotes)
        and KJV, with support for reading both in parallel. No ads.
        Download from %s</string>
    <string name="feedback_email">contact.niv1984@gmail.com</string>
    <string name="feedback_subject">&appname; Feedback</string>
    <string name="feedback_title">Your Comment</string>
    <string name="exit_text">Press again to exit</string>
    <string name="select_chapter">Select chapter</string>
    <string name="app_site">www.aaronicsubstances.com/niv1984</string>
    <string name="app_company">Aaronic Substances</string>
    <string name="current_version">Version %1$s</string>
    <string name="version_check">Checking for latest version...</string>
    <string name="latest_version"> (latest version is %1$s)</string>
    <string name="latest_version_unknown">(version check failed)</string>
    <string name="copyright_text">\u00A9 %1$s %2$s. All rights reserved.</string>
    <string name="message_update_required">This version of &appname; is outdated. Please update to latest version.</string>
    <string name="credits">Find Privacy Policy <a href="https://doc-hosting.flycricket.io/com-aaronicsubstances-niv1984-privacy-policy/a14ffad8-3574-4df7-81dc-70ad951bc09c/privacy">here</a>.</string>

    <string-array name="books">
        <item>Genesis</item>
        <item>Exodus</item>
        <item>Leviticus</item>
        <item>Numbers</item>
        <item>Deuteronomy</item>
        <item>Joshua</item>
        <item>Judges</item>
        <item>Ruth</item>
        <item>1 Samuel</item>
        <item>2 Samuel</item>
        <item>1 Kings</item>
        <item>2 Kings</item>
        <item>1 Chronicles</item>
        <item>2 Chronicles</item>
        <item>Ezra</item>
        <item>Nehemiah</item>
        <item>Esther</item>
        <item>Job</item>
        <item>Psalms</item>
        <item>Proverbs</item>
        <item>Ecclesiastes</item>
        <item>Songs of Solomon</item>
        <item>Isaiah</item>
        <item>Jeremiah</item>
        <item>Lamentations</item>
        <item>Ezekiel</item>
        <item>Daniel</item>
        <item>Hosea</item>
        <item>Joel</item>
        <item>Amos</item>
        <item>Obadiah</item>
        <item>Jonah</item>
        <item>Micah</item>
        <item>Nahum</item>
        <item>Habakkuk</item>
        <item>Zephaniah</item>
        <item>Haggai</item>
        <item>Zechariah</item>
        <item>Malachi</item>
        <item>Matthew</item>
        <item>Mark</item>
        <item>Luke</item>
        <item>John</item>
        <item>Acts</item>
        <item>Romans</item>
        <item>1 Corinthians</item>
        <item>2 Corinthians</item>
        <item>Galatians</item>
        <item>Ephesians</item>
        <item>Philippians</item>
        <item>Colossians</item>
        <item>1 Thessalonians</item>
        <item>2 Thessalonians</item>
        <item>1 Timothy</item>
        <item>2 Timothy</item>
        <item>Titus</item>
        <item>Philemon</item>
        <item>Hebrews</item>
        <item>James</item>
        <item>1 Peter</item>
        <item>2 Peter</item>
        <item>1 John</item>
        <item>2 John</item>
        <item>3 John</item>
        <item>Jude</item>
        <item>Revelation</item>
    </string-array>

    <string-array name="book_keys">
        <item>GEN</item>
        <item>EXOD</item>
        <item>LEV</item>
        <item>NUM</item>
        <item>DEUT</item>
        <item>JOSH</item>
        <item>JUDG</item>
        <item>RUTH</item>
        <item>1SAM</item>
        <item>2SAM</item>
        <item>1KGS</item>
        <item>2KGS</item>
        <item>1CHRON</item>
        <item>2CHRON</item>
        <item>EZRA</item>
        <item>NEH</item>
        <item>ESTH</item>
        <item>JOB</item>
        <item>PS</item>
        <item>PROV</item>
        <item>ECC</item>
        <item>SONG</item>
        <item>ISA</item>
        <item>JER</item>
        <item>LAM</item>
        <item>EZEK</item>
        <item>DAN</item>
        <item>HOSEA</item>
        <item>JOEL</item>
        <item>AMOS</item>
        <item>OBAD</item>
        <item>JONAH</item>
        <item>MICAH</item>
        <item>NAHUM</item>
        <item>HAB</item>
        <item>ZEPH</item>
        <item>HAG</item>
        <item>ZECH</item>
        <item>MAL</item>
        <item>MATT</item>
        <item>MARK</item>
        <item>LUKE</item>
        <item>JOHN</item>
        <item>ACTS</item>
        <item>ROM</item>
        <item>1COR</item>
        <item>2COR</item>
        <item>GAL</item>
        <item>EPH</item>
        <item>PHIL</item>
        <item>COL</item>
        <item>1THES</item>
        <item>2THES</item>
        <item>1TIM</item>
        <item>2TIM</item>
        <item>TIT</item>
        <item>PHILEM</item>
        <item>HEB</item>
        <item>JAS</item>
        <item>1PET</item>
        <item>2PET</item>
        <item>1JOHN</item>
        <item>2JOHN</item>
        <item>3JOHN</item>
        <item>JUDE</item>
        <item>REV</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_zoom">Text Size:</string>
    <string name="action_chapter_selection">Chapter:</string>

    <!-- Preference Titles -->
    <string name="pref_screen_header">Reading Settings</string>
    <string name="shared_pref_zoom">zoom</string>
    <string name="shared_pref_line_height">line_height</string>
    <string name="shared_pref_keep_screen_on">keep_screen_on</string>
    <string name="shared_pref_read_both_side_by_side">two_column_mode</string>
    <string name="shared_pref_night_mode">night_mode</string>

    <string name="pref_screen_title_keep_screen_on">Keep Screen On</string>
    <string name="pref_screen_title_zoom">Text Size</string>
    <string name="pref_screen_title_line_height">Interline Spacing</string>
    <string name="pref_screen_title_night_mode">Night Mode</string>
    <string name="pref_screen_title_read_both_side_by_side">Two column mode</string>
    <string name="pref_screen_summary_read_both_side_by_side">Display both versions in two columns</string>
    <string name="pref_screen_summary_keep_screen_on">Screen will still be turned off after 5 minutes of inactivity</string>
</resources>
