<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_screen_header">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/zoom_entries"
            app:entryValues="@array/zoom_values"
            app:key="@string/shared_pref_zoom"
            app:title="@string/pref_screen_title_zoom"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="@string/shared_pref_keep_screen_on"
            app:title="@string/pref_screen_title_keep_screen_on"
            app:summary="@string/pref_screen_summary_keep_screen_on"/>

        <SwitchPreferenceCompat
            app:key="@string/shared_pref_night_mode"
            app:title="@string/pref_screen_title_night_mode" />

        <SwitchPreferenceCompat
            app:key="@string/shared_pref_comment_edit_enabled"
            app:title="@string/pref_screen_title_comment_edit_enabled" />

        <EditTextPreference
            app:key="all_exclusions"
            app:title="Prefixes of Versions to Exclude from Parallel Display (CSV)"/>

    </PreferenceCategory>

</PreferenceScreen>