<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aaronicsubstances.niv1984.MainActivity">

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <item android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:orderInCategory="60"
        app:showAsAction="never" />
</menu>